<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Bai1Activity">

    <TextView
        android:id="@+id/txtTieuDe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="#046404"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/tieu_de1"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_TinhLuong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/tinh_luong" />

        <Button
            android:id="@+id/btn_LamMoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:text="@string/lam_moi" />

        <Button
            android:id="@+id/btn_KetThuc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ket_thuc" />
    </LinearLayout>

    <EditText
        android:id="@+id/edNgayCong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:hint="@string/nhap_so_ngay_cong"
        android:inputType="number" />

    <EditText
        android:id="@+id/edLuongNgay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nhap_luong_mot_ngay"
        android:layout_marginBottom="25dp"
        android:inputType="number" />

    <TextView
        android:id="@+id/txtLuongThang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/luong_thang"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>